# sea-orm-graphql

./: .env  Cargo.toml  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_bakery_table.rs  m20221212_172527_create_chef_table.rs
src/: main.rs  schema.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
